# tinylm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  main.py  main_llama3.py  main_qwen3.py  pyproject.toml
.github/workflows/: build.yml  check.yml
tinylm/: __main__.py  chat.py  clidefs.py  remote_chat.py  serve.py
tinylm/audio/: hann.py  spectrogram.py  stft.py  test_fft.py  test_melspectrogram.py  test_spectrogram.py  test_stft.py
tinylm/audioutil/: fft.py  melspectrogram.py  norm.py  pack.py  test_hann.py  test_norm.py  test_pack.py  test_wnconv1d.py  test_wnconvtranspose1d.py  wnconv1d.py  wnconvtranspose1d.py
tinylm/llms/abstract/: causal_lm.py  generation_config.py  generation_context.py  tokenizer.py
tinylm/llms/llama/: cache.py  generation_context.py  model.py  sample.py
tinylm/llms/llama3/: model.py
tinylm/llms/qwen3/: model.py
tinylm/models/abstract/: cache.py  causal_lm.py  generation_context.py
tinylm/models/llama/: cache.py  model.py  sample.py
tinylm/models/llama3/: model.py
tinylm/models/qwen3/: model.py
tinylm/testutil/: torch_close.py
tinylm/train/: __main__.py
tinylm/train/abstract/: optimizer.py  trainer.py
tinylm/train/lm/: optimizer.py  trainer.py
