[project]
name = "tg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "huggingface-hub>=0.31.2",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "rich>=14.0.0",
    "tinygrad",
    "transformers>=4.52.3",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
